# CalculatorNCurses

./: CMakeLists.txt
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: DecodeMessage.hpp  Display.hpp  Menu.hpp  RunOperator.hpp
src/: DecodeMessage.cpp  Display.cpp  Menu.cpp  RunOperator.cpp  main.cpp
